--- a/about/index.html
+++ b/about/index.html
@@ -10,8 +10,8 @@
     <meta name="description" content="© 2015 zhangjia. All rights reserved.
 ">
 
-    <link rel="stylesheet" href="/css/main.css">
-    <link rel="canonical" href="/about/">
+    <link rel="stylesheet" href="http://localhost:4000/css/main.css">
+    <link rel="canonical" href="http://localhost:4000/about/">
 </head>
 
 
@@ -21,7 +21,7 @@
 
   <div class="wrapper">
 
-    <a class="site-title" href="/">研究课题</a>
+    <a class="site-title" href="http://localhost:4000/">研究课题</a>
 
     <nav class="site-nav">
       <a href="#" class="menu-icon">
@@ -35,7 +35,7 @@
       <div class="trigger">
         
 			
-				<a class="page-link" href="/about/">About</a>
+				<a class="page-link" href="http://localhost:4000/about/">About</a>
 			
         
 			
@@ -96,7 +96,7 @@
 			
 			<div class="footer-col-item">
 				<a href="mailto:609159449@qq.com">
-					<img src="/image/email.png"/>
+					<img src="http://localhost:4000/image/email.png"/>
 					609159449@qq.com
 				</a>
 			</div>
@@ -132,7 +132,8 @@
 
 		/* * * DON'T EDIT BELOW THIS LINE * * */
 		(function () {
-			var s = document.createElement('script'); s.async = true;
+			var s = document.createElement('script'); 
+			s.async = true;
 			s.type = 'text/javascript';
 			s.src = '//' + disqus_shortname + '.disqus.com/count.js';
 			(document.getElementsByTagName('HEAD')[0] || document.getElementsByTagName('BODY')[0]).appendChild(s);
