--- a/about/index.html
+++ b/about/index.html
@@ -10,8 +10,8 @@
     <meta name="description" content="© 2015 zhangjia. All rights reserved.
 ">
 
-    <link rel="stylesheet" href="http://localhost:4000/css/main.css">
-    <link rel="canonical" href="http://localhost:4000/about/">
+    <link rel="stylesheet" href="http://touxienihao.github.io/css/main.css">
+    <link rel="canonical" href="http://touxienihao.github.io/about/">
 </head>
 
 
@@ -21,7 +21,7 @@
 
   <div class="wrapper">
 
-    <a class="site-title" href="http://localhost:4000/">研究课题</a>
+    <a class="site-title" href="http://touxienihao.github.io/">研究课题</a>
 
     <nav class="site-nav">
       <a href="#" class="menu-icon">
@@ -35,7 +35,7 @@
       <div class="trigger">
         
 			
-				<a class="page-link" href="http://localhost:4000/about/">About</a>
+				<a class="page-link" href="http://touxienihao.github.io/about/">About</a>
 			
         
 			
@@ -96,7 +96,7 @@
 			
 			<div class="footer-col-item">
 				<a href="mailto:609159449@qq.com">
-					<img src="http://localhost:4000/image/email.png"/>
+					<img src="http://touxienihao.github.io/image/email.png"/>
 					609159449@qq.com
 				</a>
 			</div>
